# SmartEnergyHome

./: .env.sample  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  manage.py  pyproject.toml  start-celerybeat.sh  start-celeryworker.sh
api/: models.py
api/management/commands/: scrape.py
app/apps/authenticator/: apps.py  forms.py  urls.py  views.py
app/apps/core/: consts.py  enums.py  forms.py  models.py  urls.py  views.py
app/apps/devices/: apps.py  enums.py  exceptions.py  forms.py  models.py  urls.py  views.py
app/apps/energy_scraper/: items.py  settings.py  tasks.py
app/apps/planner/: apps.py
app/apps/predictor/: apps.py
app/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
app/energy_scraper/: apps.py  items.py  settings.py  tasks.py
app/energy_scraper/spiders/: energy_spider.py
app/static/css/: base.css  footer.css  navbar.css
app/static/js/: base.js
app/templates/: base.html  footer.html  layout.html  navbar.html
apps/api/: models.py
apps/api/migrations/: 0001_initial.py  0002_alter_energyprice_date.py  0003_alter_energyprice_hour.py
apps/energy_scraper/: items.py  middlewares.py  settings.py  tasks.py
config/: asgi.py  celery.py  settings.py  wsgi.py
energy_scraper/: apps.py  items.py  pipelines.py  scrapy.cfg
energy_scraper/energy_scraper/: items.py  middlewares.py  pipelines.py  settings.py
energy_scraper/spiders/: energy_spider.py
scripts/: start_celerybeat.sh  start_celeryworker.sh
smart_energy/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
(+42 files in other folders)
