[tool.poetry]
name = "smartenergyhome"
version = "0.1.0"
description = ""
authors = ["Piotr <piotr.zegarekk@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.2"

[tool.poetry.group.dev.dependencies]
pytest = "7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
